modal styled, and navbar collapse bug fix
background color on navbar collapse

--- a/assets/less/typography.less
+++ b/assets/less/typography.less
@@ -68,3 +68,9 @@ h4 {
 	src:url('/smrtk/wp-content/themes/SmartKit/assets/fonts/AvenirLTStd-Black.otf') 
 	format('opentype');
 }
+
+.required {
+	height: 48px;
+	border-radius: 4px;
+	border: 2px solid #ccc;
+}
