--- a/assets/less/ui.less
+++ b/assets/less/ui.less
@@ -7,6 +7,11 @@
 	color: #fff;
 }
 
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+	border-color: #e7e7e7;
+	background-color: #fff;
+}
+
 .hero-btn {
 	background: transparent;
 	border-radius: 4px;
@@ -283,5 +288,34 @@ a:hover {
 
 .alert-footer {
 	width: 18%;
+}
+
+.submit {
+	height: 52px;
+	margin-top: -3px;
+	color: #6d6d6d !important;
+	padding: 13px 24px 12px 24px;
+    border-top: 2px solid #9540d0;
+    border-bottom: 2px solid #e733a5;
+    margin: 20px auto;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#9540d0), to(#e733a5));
+    background-image: -webkit-linear-gradient(#9540d0, #e733a5);
+    background-image:
+        -moz-linear-gradient(#9540d0, #e733a5),
+        -moz-linear-gradient(#9540d0, #e733a5)
+    ;
+    background-image:
+        -o-linear-gradient(#9540d0, #e733a5),
+        -o-linear-gradient(#9540d0, #e733a5)
+    ;
+    background-image: 
+        linear-gradient(#9540d0, #e733a5),
+        linear-gradient(#9540d0, #e733a5)
+    ;
+    -moz-background-size:2px 100%;
+    background-size:2px 100%;
+    background-position:0 0, 100% 0;
+    background-repeat:no-repeat;
+    background-color: #fff;
 }
 
